# vigil-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-COMMERCIAL.md  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
crates/vigil/: Cargo.toml
crates/vigil-http-streamer/: Cargo.toml
crates/vigil-http-streamer/src/: main.rs  source_http.rs  source_k8s.rs  tcp_sink.rs
crates/vigil-log-relay/: Cargo.toml  README.md
crates/vigil-log-relay/src/: cli.rs  filter.rs  healthcheck.rs  main.rs  source_http.rs  source_unix.rs  source_url.rs  tcp_sink.rs
crates/vigil-log-relay/src/source_http/: mod.rs  tests.rs
crates/vigil-log-relay/src/source_k8s/: client.rs  mod.rs  stream.rs
crates/vigil-log-relay/src/source_unix/: connector.rs  mod.rs  tests.rs
crates/vigil-log-relay/src/source_url/: mod.rs  tests.rs
crates/vigil-types/: Cargo.toml
crates/vigil-types/src/: api.rs  identity.rs  lib.rs  plan.rs  signal.rs
crates/vigil-types/src/no_proxy/: mod.rs  tests.rs
crates/vigil-types/src/plan/: alert.rs  check.rs  layer.rs  mod.rs  service.rs  tests.rs
crates/vigil/src/: lib.rs  main.rs
crates/vigil/src/client/: mod.rs  proxy.rs  transport.rs
crates/vigil/src/client/http_client/: mod.rs  tests.rs
crates/vigil/src/client/transport/: connector.rs  http.rs  mod.rs  tests.rs  unix.rs
crates/vigil/src/cmd/: alerts.rs  checks.rs  identities.rs  logs.rs  mod.rs  services.rs  vigild.rs
crates/vigild/: Cargo.toml
crates/vigild/src/: check.rs  duration.rs  identity.rs  lib.rs  logs.rs  main.rs  metrics.rs  process_util.rs  reaper.rs  server.rs  state.rs  testutil.rs  tls.rs
crates/vigild/src/alert/: mod.rs  tests.rs
crates/vigild/src/alert/delivery/: client.rs  mod.rs  send.rs  tests.rs  worker.rs
crates/vigild/src/alert/format/: mod.rs  tests.rs
crates/vigild/src/api/: auth.rs  handlers.rs  mod.rs
crates/vigild/src/api/auth/: mod.rs  tests.rs
crates/vigild/src/api/handlers/: admin.rs  alerts.rs  checks.rs  identities.rs  logs.rs  metrics.rs  mod.rs  services.rs  system.rs
crates/vigild/src/check/: mod.rs
crates/vigild/src/check/actor/: mod.rs  tests.rs
crates/vigild/src/check/probe/: exec.rs  http.rs  mod.rs  tcp.rs  tests.rs
crates/vigild/src/identity/: mod.rs  tests.rs
crates/vigild/src/logs/: mod.rs  push.rs  reader.rs  store.rs  tests.rs
crates/vigild/src/metrics/: mod.rs  tests.rs
crates/vigild/src/overlord/: events.rs  handlers.rs  lifecycle.rs  mod.rs  plan.rs  tests.rs
crates/vigild/src/process_util/: identity.rs  mod.rs  parse.rs  tests.rs
crates/vigild/src/service/: actor.rs  mod.rs
crates/vigild/src/service/actor/: backoff.rs  handlers.rs  mod.rs  signals.rs  spawn.rs  tests.rs
crates/vigild/src/tls/: acceptor.rs  cert.rs  mod.rs  proxy.rs  tests.rs
crates/vigild/tests/api_handlers/: alerts.rs  auth.rs  checks.rs  identities.rs  logs.rs  main.rs  misc.rs  services.rs  system.rs
crates/vigild/tests/outgoing_http/: alertmanager.rs  alerts.rs  main.rs
docs/: README.md
docs/api-reference/: rest-api.md
docs/operator-guide/: container-setup.md  orchestrators.md  tls.md
docs/specs/: openapi.yaml
docs/user-guide/: cli-reference.md  configuration.md  installation.md  logging.md
examples/: README.md
examples/alerts-webhook/layers/: 001-alerts.yaml
examples/alerts/layers/: 001-alerts.yaml
examples/filebeat/: Containerfile  filebeat.yml
examples/filebeat-push/: Containerfile  filebeat.yml
examples/filebeat-push/layers/: 001-services.yaml
examples/filebeat/layers/: 001-services.yaml
examples/fluentbit/: Containerfile  fluent-bit.conf
examples/fluentbit/layers/: 001-services.yaml
examples/full-container/: Containerfile  h2o.conf
examples/full-container/layers/: 001-h2o.yaml
examples/full-container/www/: index.html
examples/http-check/layers/: 001-website.yaml
examples/hug/: Containerfile  haproxy.cfg
examples/hug/layers/: 001-services.yaml
examples/hug/scripts/: run-controller  run-haproxy
examples/identities/: Containerfile
examples/identities/layers/: 000-services.yaml
examples/identities/scripts/: setup-identities
examples/kubernetes-pod-logs/: Containerfile  Containerfile.build  OLD_pod-log-collector.sh  filebeat.yml
examples/kubernetes-pod-logs/k8s/: deployment.yaml  rbac.yaml
examples/kubernetes-pod-logs/layers/: 001-services.yaml
examples/layers/: 000-base.yaml  100-app.yaml  200-worker-enabled.yaml  900-dev-overrides.yaml
examples/layers-minimal/: 000-demo.yaml
examples/migrate-from-s6/: Containerfile  Containerfile.s6  nginx.conf
examples/migrate-from-s6/layers/: 001-services.yaml
examples/migrate-from-s6/s6/s6-rc.d/api/: finish  run
examples/migrate-from-s6/s6/s6-rc.d/nginx/: finish
examples/migrate-from-s6/s6/s6-rc.d/nginx-healthcheck/: run
examples/php-caddy/: Caddyfile  Containerfile  php-fpm.conf
examples/php-caddy/layers/: 001-services.yaml
examples/php-caddy/www/: healthz.php
examples/php-fpm/: Containerfile  php-fpm.conf  pool.conf
examples/php-fpm/layers/: 001-services.yaml
examples/quarkus/: Containerfile
examples/quarkus/app/: pom.xml
examples/quarkus/app/src/main/resources/: application.properties
examples/quarkus/layers/: 001-services.yaml
examples/tomcat/: Containerfile
examples/tomcat/conf/: logging.properties
examples/tomcat/layers/: 001-services.yaml
examples/vector/: Containerfile  vector.toml
examples/vector/layers/: 001-services.yaml
packaging/: vigild.service
tests/vtest/: README.md  run.sh  v0001_system_info.vtc  v0002_api_lists.vtc  v0003_metrics.vtc  v0004_openapi.vtc  v0005_replan.vtc  v0006_identities.vtc  v0007_daemon_stop.vtc  v0008_logs_query.vtc  v0009_vigil_cli.vtc  v0010_vigil_log_relay.vtc  v0011_vigil_log_relay_source_url.vtc  v0012_vigil_alerts.vtc  v0013_vigil_tls_and_reaper.vtc  v0014_vigil_checks_logs_vigild.vtc  v0015_logs_push_tcp_reconnect.vtc  v0016_vigil_alerts_body_template.vtc  v0017_mtls.vtc  v0018_vigil_auth.vtc  v0019_vigild_json_log_format_signals_restart.vtc  v0020_metrics_dynamic.vtc  v0021_vigil_logs_follow.vtc  v0022_vigil_https_transport.vtc
(+2 files in other folders)
