[workspace]
members = [
    "crates/vigil-types",
    "crates/vigild",
    "crates/vigil",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio              = { version = "1",    features = ["full"] }
# HTTP server
axum               = { version = "0.8",  features = ["ws", "macros"] }
tower              = { version = "0.5" }
tower-http         = { version = "0.6",  features = ["trace"] }
# HTTP client (CLI-side)
reqwest            = { version = "0.12", features = ["json", "stream"] }
hyper              = { version = "1",    features = ["full"] }
hyper-util         = { version = "0.1" }
# Serialisation
serde              = { version = "1",    features = ["derive"] }
serde_json         = { version = "1" }
serde_yaml         = { version = "0.9" }
# CLI
clap               = { version = "4",    features = ["derive", "env"] }
# Error handling
anyhow             = { version = "1" }
thiserror          = { version = "2" }
# Logging / tracing
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3",  features = ["env-filter", "json"] }
# TLS
rustls             = { version = "0.23" }
tokio-rustls       = { version = "0.26" }
rcgen              = { version = "0.13" }
# Unix / signals / process
nix                = { version = "0.29", features = ["process", "signal", "user", "fs"] }
# Concurrency utilities
crossbeam-channel  = { version = "0.5" }
crossbeam-queue    = { version = "0.3" }
crossbeam-utils    = { version = "0.8" }
# Utilities
uuid               = { version = "1",    features = ["v4"] }
chrono             = { version = "0.4",  features = ["serde"] }
notify             = { version = "7" }
regex              = { version = "1" }
indexmap           = { version = "2",    features = ["serde"] }
# Allocator
mimalloc           = { version = "0.1",  default-features = false }
