[package]
name        = "vigil-http-streamer"
version     = "1.0.0"
edition     = "2024"
license     = "AGPL-3.0-only"
description = "Generic HTTP→TCP ndjson streamer and Kubernetes pod log collector for vigil-rs"
homepage    = "https://github.com/git001/vigil-rs"
repository  = "https://github.com/git001/vigil-rs"

# ---------------------------------------------------------------------------
# cargo-deb  (debian / ubuntu packages)
# ---------------------------------------------------------------------------
[package.metadata.deb]
name               = "vigil-http-streamer"
maintainer         = "vigil-rs contributors <al-virgilrs@none.at>"
copyright          = "2026 vigil-rs contributors"
license-file       = ["../../LICENSE", "0"]
extended-description = """\
vigil-http-streamer forwards ndjson log streams to a TCP sink.
It can collect logs from Kubernetes pods via the Kubernetes API,
or stream from an HTTP/HTTPS URL or a Unix-domain socket."""
depends            = ""
section            = "admin"
priority           = "optional"
assets = [
    ["../../target/release/vigil-http-streamer", "usr/local/bin/vigil-http-streamer", "755"],
]

# ---------------------------------------------------------------------------
# cargo-generate-rpm  (RHEL / AlmaLinux / Rocky packages)
# ---------------------------------------------------------------------------
[package.metadata.generate-rpm]
assets = [
    { source = "../../target/release/vigil-http-streamer", dest = "/usr/local/bin/vigil-http-streamer", mode = "0755" },
]
[package.metadata.generate-rpm.requires]

[[bin]]
name = "vigil-http-streamer"
path = "src/main.rs"

[dependencies]
# Workspace shared deps
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client (--source-url mode)
reqwest            = { workspace = true }

# Unix socket HTTP client (--source-socket mode, vigild local socket)
hyper              = { workspace = true }
hyper-util         = { workspace = true }
http-body-util     = { workspace = true }
bytes              = { workspace = true }
tower              = { workspace = true }

# Kubernetes client (--kubernetes mode)
kube         = { version = "0.98", default-features = false, features = ["client", "rustls-tls"] }
rustls       = { version = "0.23", features = ["ring"], default-features = false }
k8s-openapi  = { version = "0.24", features = ["v1_32"] }

# Async I/O bridges (futures-io ↔ tokio-io, body streaming)
futures      = "0.3"
tokio-util   = { version = "0.7", features = ["compat", "io"] }
