[package]
name        = "vigil-log-relay"
version     = "3.0.0"
edition     = "2024"
license     = "AGPL-3.0-only"
description = "Reads ndjson log streams from Kubernetes pods, HTTP endpoints, or Unix sockets and forwards them to a TCP sink"
homepage    = "https://github.com/git001/vigil-rs"
repository  = "https://github.com/git001/vigil-rs"

# ---------------------------------------------------------------------------
# cargo-deb  (debian / ubuntu packages)
# ---------------------------------------------------------------------------
[package.metadata.deb]
name               = "vigil-log-relay"
maintainer         = "vigil-rs contributors <al-virgilrs@none.at>"
copyright          = "2026 vigil-rs contributors"
license-file       = ["../../LICENSE", "0"]
extended-description = """\
vigil-log-relay reads ndjson log streams from Kubernetes pods via the \
Kubernetes API, from HTTP/HTTPS endpoints, or from Unix-domain sockets, \
and forwards the lines to a TCP sink (Filebeat, Fluent Bit, Logstash)."""
depends            = ""
section            = "admin"
priority           = "optional"
assets = [
    ["../../target/release/vigil-log-relay", "usr/local/bin/vigil-log-relay", "755"],
]

# ---------------------------------------------------------------------------
# cargo-generate-rpm  (RHEL / AlmaLinux / Rocky packages)
# ---------------------------------------------------------------------------
[package.metadata.generate-rpm]
assets = [
    { source = "../../target/release/vigil-log-relay", dest = "/usr/local/bin/vigil-log-relay", mode = "0755" },
]
[package.metadata.generate-rpm.requires]

[[bin]]
name = "vigil-log-relay"
path = "src/main.rs"

[dependencies]
vigil-types        = { path = "../vigil-types" }
# Workspace shared deps
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client (--source-url mode)
reqwest            = { workspace = true }

# Unix socket HTTP client (--source-socket mode, vigild local socket)
hyper              = { workspace = true }
hyper-util         = { workspace = true }
http-body-util     = { workspace = true }
bytes              = { workspace = true }
tower              = { workspace = true }

# Kubernetes client (--kubernetes mode)
kube         = { version = "0.98", default-features = false, features = ["client", "runtime", "rustls-tls"] }
http         = "1.1"
rustls       = { version = "0.23", features = ["ring"], default-features = false }
rustls-pemfile = "2"
k8s-openapi  = { version = "0.24", features = ["v1_32"] }

# Async I/O bridges (futures-io ↔ tokio-io, body streaming)
futures      = "0.3"
tokio-util   = { version = "0.7", features = ["compat", "io"] }

# Log line filtering (--include / --exclude)
regex        = "1"

# TCP keepalive configuration (--dest-keepalive-*)
socket2      = { version = "0.5", features = ["all"] }

[dev-dependencies]
rcgen    = { workspace = true }
tempfile = { workspace = true }
