[package]
name    = "vigil-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
indexmap   = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
thiserror  = { workspace = true }
nix        = { workspace = true }
