[package]
name    = "vigil-types"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
serde      = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
indexmap   = { workspace = true }
utoipa     = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
thiserror  = { workspace = true }
nix        = { workspace = true }
