[package]
name    = "vigil"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vigil"
path = "src/main.rs"

[lib]
name = "vigil_client"
path = "src/lib.rs"

[dependencies]
vigil-types = { path = "../vigil-types" }
tokio       = { workspace = true }
reqwest     = { workspace = true }
hyper       = { workspace = true }
hyper-util  = { workspace = true }
clap        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono      = { workspace = true }
mimalloc    = { workspace = true }
