[package]
name    = "vigild"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vigild"
path = "src/main.rs"

[dependencies]
vigil-types        = { path = "../vigil-types" }
tokio              = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_yaml         = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
rustls             = { workspace = true }
tokio-rustls       = { workspace = true }
rcgen              = { workspace = true }
nix                = { workspace = true }
crossbeam-channel  = { workspace = true }
crossbeam-queue    = { workspace = true }
crossbeam-utils    = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
notify             = { workspace = true }
indexmap           = { workspace = true }
mimalloc           = { workspace = true }
